--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,33 @@
-Package            Version Location                   
------------------- ------- ---------------------------
-affine             2.2.2   
-argh               0.26.2  
-atomicwrites       1.3.0   
-attrs              19.1.0  
-Click              7.0     
-click-plugins      1.1.1   
-cligj              0.5.0   
-colorama           0.4.1   
-coverage           4.5.3   
-docopt             0.6.2   
-Flask              1.0.3   
-importlib-metadata 0.18    
-itsdangerous       1.1.0   
-Jinja2             2.10.1  
-MarkupSafe         1.1.1   
-more-itertools     7.0.0   
-numpy              1.16.4  
-packaging          19.0    
-pathtools          0.1.2   
-pip                19.1.1  
-pluggy             0.12.0  
-py                 1.8.0   
-pyparsing          2.4.0   
-pytest             4.6.3   
-pytest-cov         2.7.1   
-pytest-watch       4.2.0   
-PyYAML             5.1.1   
-rasterio           1.0.23  
-setuptools         39.0.1  
-six                1.12.0  
-snuggs             1.4.6   
-watchdog           0.9.0   
-wcwidth            0.1.7   
-Werkzeug           0.15.4  
-zipp               0.5.1   
+affine==2.2.2
+argh==0.26.2
+atomicwrites==1.3.0
+attrs==19.1.0
+Click==7.0
+click-plugins==1.1.1
+cligj==0.5.0
+colorama==0.4.1
+coverage==4.5.3
+docopt==0.6.2
+Flask==1.0.3
+importlib-metadata==0.18
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+more-itertools==7.0.0
+numpy==1.16.4
+packaging==19.0
+pathtools==0.1.2
+pluggy==0.12.0
+py==1.8.0
+pyparsing==2.4.0
+pytest==4.6.3
+pytest-cov==2.7.1
+pytest-watch==4.2.0
+PyYAML==5.1.1
+rasterio==1.0.23
+six==1.12.0
+snuggs==1.4.6
+watchdog==0.9.0
+wcwidth==0.1.7
+Werkzeug==0.15.4
+zipp==0.5.1
